@startuml

class Bookmark {
    +id
    +url
    +title
    +{static} all()
    +{static} create(url, title)
    +{static} delete(id)
    +{static} update(id, url, title)
    +{static} find(id)
    +{static} a_url?(string)
    +comments()
}

class Comment {
    +id
    +text
    +bookmark_id
    +{static} comments(bm_id =nil)
    +{static} create(text, bookmark_id)

}

class Tag {
    +id
    +content
    +{static} create(content)
    +{static} find(id)
    +initialize(id, content)
    +bookmarks()
}

class BookmarkTag {
    +bt_id
    +{static} create(bm_id, tg_id)
    +initialize(bt_id)
}


class DatabaseConnection <<Singleton>>  {
    +{static} connection
    +{static} setup()
    +{static} query()
}


class User {
    id
    email
}

class DbUser <<Database Table>> {
    id
    email
    password_hash
}

Controller --> Bookmark: all bookmarks
Controller --> Comment
Controller--> Tag
Bookmark --> Controller: [collection of bookmarks]
Comment --> Controller: [collection of comments]
Tag --> Controller: [collection of tags]
Tag  --> BookmarkTag
BookmarkTag -- Bookmark
Bookmark --> DatabaseConnection
Controller --> Index

@enduml
